--- a/vercel.json
+++ b/vercel.json
@@ -4,7 +4,10 @@
     {
       "src": "frontend/package.json",
       "use": "@vercel/static-build",
-      "config": { "distDir": "build" }
+      "config": {
+        "buildCommand": "yarn build",
+        "distDir": "build"
+      }
     },
     {
       "src": "backend/server.py",
